@@ -1,3 +1,6 @@
+2008-11-12  Dustin J. Mitchell <dustin@zmanda.com>
+	* man/xml-source/amfetchdump.8.xml: fix ugly HTML formatting
+
 2008-11-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* amandad-src/amandad.c: Check that something is ready to be read
 				 before calling errfd_recv.
